@@ -78,7 +78,7 @@
 int pdsh_module_priority = DEFAULT_MODULE_PRIORITY;
 
 struct ssh_info_struct {
-    int ssh_pid;            /* PID of ssh command         */
+    pid_t ssh_pid;          /* PID of ssh command         */
     char *target;           /* Hostname of ssh target     */
     int fd;                 /* stderr fd to ssh command for signals  */
 };
@@ -190,7 +190,7 @@ static int sshcmd_signal(int fd, void *arg, int signum)
      *  Always send SIGTERM. SIGINT doesn't seem to get forwarded by ssh, and
      *    really termination of the connection is probably the desired result.
      */
-    err ("sending SIGTERM to ssh %s pid %d\n", s->target, s->ssh_pid);
+    err ("sending SIGTERM to ssh %s pid %d\n", s->target, (int) s->ssh_pid);
     return (kill (s->ssh_pid, SIGTERM));
 }
 
@@ -319,7 +319,7 @@ sshcmd_destroy (struct ssh_info_struct *s)
         return 0;
 
     if (waitpid (s->ssh_pid, &status, 0) < 0)
-        err ("%p: %S: ssh pid %ld: %m\n", s->target, s->ssh_pid);  
+        err ("%p: %S: ssh pid %ld: %m\n", s->target, (long) s->ssh_pid);  
 
     if (status != 0)
         err ("%p: %s: ssh exited with exit code %d\n", 
